--- a/docs/assets/CSS/mainStyle.css
+++ b/docs/assets/CSS/mainStyle.css
@@ -157,3 +157,15 @@ body {
     height: auto; /* Allow dynamic height on smaller screens */
   }
 }
+
+/* Add this to your CSS file */
+.grid-item a {
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 1.2em; /* Adjust the size as needed */
+  color: inherit;   /* This makes the link use the same color as the surrounding text */
+}
+
+.grid-item a:hover {
+  text-decoration: underline; /* Optional: Adds an underline on hover */
+}
